# minizip

./: CMakeLists.txt
include/minizip/: iowin32.h
src/: iowin32.c
